# openmo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  compile_flags.txt
assets/shaders/: composite.frag  composite.vert  default.frag  default.vert  geom.vert  picking.frag  picking.vert  screen.frag  screen.vert  solid.frag  transparent.frag
src/: pch.hpp
src/apps/gabbit/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp  scene.cpp  scene.hpp
src/apps/openmo/: CMakeLists.txt  main.cpp
src/libs/alive/: CMakeLists.txt  object.hpp  scene.cpp  scene.hpp  xinfile.cpp  xinfile.hpp  xrgfile.cpp  xrgfile.hpp
src/libs/common/: CMakeLists.txt  log.cpp  log.hpp  options.cpp  options.hpp
src/libs/graphics/: CMakeLists.txt  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/libs/nif/: CMakeLists.txt  base.hpp  blockptr.hpp  controller.cpp  controller.hpp  effects.cpp  effects.hpp  extradata.cpp  extradata.hpp  geom.cpp  geom.hpp  keys.hpp  nifreader.cpp  nifreader.hpp  nifstream.cpp  nifstream.hpp  nodes.cpp  nodes.hpp  objects.cpp  objects.hpp  particles.cpp  particles.hpp  shaders.cpp  shaders.hpp  skin.cpp  skin.hpp  types.hpp
